# comp0034-wk10

./: README.md  pyproject.toml  requirements.txt  requirements_dash.txt  requirements_flask.txt
src/choropleth_maps/: choropleth_maps.md
src/dash_multi/: layout_events.py
src/dash_paralympics/: layout_elements.py  paralympics_dash.py
src/dash_recycle/: recycle_app.py
src/dash_sqlalchemy/: add_data.py  app.py  chart.py  models.py  server.py
src/flask_paralympics/: __init__.py
src/flask_simple_login/: __init__.py  forms.py  models.py  views.py
tests/test_recycle_app/: conftest.py
